# web-framework

./: README.md  web-framework.cabal
app/: app.hs  migrate.hs  schema.hs
src/: API.hs  App.hs  Migrate.hs  Schema.hs  Server.hs
src/Schema/: Latest.hs  Prior.hs  V0.hs  V1.hs  V2.hs
