cabal-version: 1.12

name: web-framework
version: 0.1.0.0
author: Samuel Schlesinger
maintainer: Samuel Schlesinger
copyright: 2020 Samuel Schlesinger
license: AllRightsReserved
build-type: Simple

library
  exposed-modules: 
      App
    , Migrate
  other-modules:
      API
    , Schema.V0
    , Server
  hs-source-dirs: src
  other-extensions:
  ghc-options: -Wall -Werror -fwarn-tabs -Wincomplete-uni-patterns -O2
  build-depends:
      aeson >= 1.4 && < 1.5
    , base >= 4.13 && < 5
    , bytestring >= 0.10 && < 0.11
    , free-categories >= 0.2 && < 0.3
    , http-api-data >= 0.4 && < 0.5
    , http-types >= 0.12 && < 0.13
    , servant >= 0.17 && < 0.18
    , servant-server >= 0.17 && < 0.18
    , squeal-postgresql >= 0.6 && < 0.7
    , tagged >= 0.8 && < 0.9
    , text >= 1.2 && < 1.3
    , vector >= 0.12 && < 0.13
    , wai >= 3.2 && < 3.3
    , warp >= 3.3 && < 3.4

executable app
  main-is: app/app.hs
  build-depends: web-framework

executable migrate
  main-is: app/migrate.hs
  build-depends: web-framework
