cabal-version: 1.12

name: web-framework
version: 0.1.0.0
author: Samuel Schlesinger
maintainer: Samuel Schlesinger
copyright: 2020 Samuel Schlesinger
license: AllRightsReserved
build-type: Simple

library
  exposed-modules: 
      App
    , Migrate
  other-modules:
      API
    , Schema.V0
    , Server
  hs-source-dirs: src
  other-extensions:
  ghc-options: -Wall -Werror -fwarn-tabs -Wincomplete-uni-patterns -O2
  build-depends:
      aeson >= 1.4
    , base >= 4.12
    , bytestring >= 0.10
    , free-categories >= 0.2
    , http-api-data >= 0.4
    , http-types >= 0.12
    , servant >= 0.17
    , servant-server >= 0.17
    , squeal-postgresql >= 0.6
    , tagged >= 0.8
    , text >= 1.2
    , vector >= 0.12
    , wai >= 3.2
    , warp >= 3.3

executable app
  main-is: app/app.hs
  build-depends: web-framework

executable migrate
  main-is: app/migrate.hs
  build-depends: web-framework
